<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="100">


        <ImageView
            android:id="@+id/list_item_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            tools:srcCompat="@drawable/ic_baseline_menu_book_24" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="85"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cooking_cuisine_class"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_item_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/jack_goody"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">


                <TextView
                    android:id="@+id/list_item_publisher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:gravity="start"
                    android:text="@string/cambridge_university_press"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/list_item_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="end"
                    android:text="@string/_1982_06_24" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
